Team result routes, naming fixes
