# boardgametracker/api.py
@@ -25,37 +25,13 @@ api.add_resource(TeamCollection, "/teams/")
 api.add_resource(TeamItem, "/team/<team:team>/")
 api.add_resource(GameCollection, "/games/")
 api.add_resource(GameItem, "/game/<game:game>/")
-
-# 2 routes for map
-api.add_resource(MapCollection,
-                 "/game/<game:game>/maps/"
-                 )
-api.add_resource(MapItem,
-                "/game/<game:game>/map/<map_:map_>/"
-                 )
-
-# 2 routes for rulesets
-api.add_resource(RulesetCollection,
-                 "/game/<game:game>/rulesets/"
-                 )
-api.add_resource(RulesetItem,
-                 "/game/<game:game>/ruleset/<ruleset:ruleset>/"
-                 )
-
+api.add_resource(MapCollection, "/game/<game:game>/maps/")
+api.add_resource(MapItem, "/game/<game:game>/map/<map_:map_>/")
+api.add_resource(RulesetCollection, "/game/<game:game>/rulesets/")
+api.add_resource(RulesetItem, "/game/<game:game>/ruleset/<ruleset:ruleset>/")
 api.add_resource(MatchCollection, "/matches/")
 api.add_resource(MatchItem, "/match/<match:match>/")
-
-# results collections
-api.add_resource(PlayerResultCollection,
-                 "/match/<match:match>/playerresults/"
-                 )
-api.add_resource(PlayerResultItem,
-                 "/match/<match:match>/playerresult/<p_res:p_res>/"
-                 )
-
-api.add_resource(TeamResultCollection,
-                 "/match/<match:match>/teamresults/"
-                 )
-api.add_resource(TeamResultItem,
-                 "/match/<match:match>/teamresult/<t_res:t_res>/"
-                 )
+api.add_resource(PlayerResultCollection, "/match/<match:match>/playerresults/")
+api.add_resource(PlayerResultItem,"/match/<match:match>/playerresult/<player_result:player_result>/")
+api.add_resource(TeamResultCollection, "/match/<match:match>/teamresults/")
+api.add_resource(TeamResultItem, "/match/<match:match>/teamresult/<team_result:team_result>/")
