# boardgametracker/resources/player_result.py
@@ -9,18 +9,19 @@ import json
 from flask import Response, request, abort, url_for
 from flask_restful import Resource
 from jsonschema import validate, ValidationError
-from werkzeug.exceptions import Conflict, BadRequest, UnsupportedMediaType
+from werkzeug.exceptions import BadRequest, UnsupportedMediaType
 
 from boardgametracker import cache, db
+from boardgametracker.constants import *
 from boardgametracker.models import PlayerResult
 from boardgametracker.utils import BGTBuilder
-from boardgametracker.constants import *
 
 
 class PlayerResultCollection(Resource):
     """
     Collection of player_results
     """
+
     @cache.cached(timeout=5)
     def get(self, match):
         """
@@ -54,13 +55,11 @@ class PlayerResultCollection(Resource):
         body.add_control("self", url_for("api.playerresultcollection", match=match))
         body["items"] = []
 
-
         # get results for match
-
 
         for result in match.player_result:
             item = BGTBuilder(result.serialize(long=True))
-            item.add_control("self", url_for("api.playerresultitem", match=match, p_res=result))
+            item.add_control("self", url_for("api.playerresultitem", match=match, player_result=result))
             item.add_control("profile", PLAYER_RESULT_PROFILE)
             body["items"].append(item)
 
@@ -114,14 +113,14 @@ class PlayerResultCollection(Resource):
         except ValidationError as err:
             raise BadRequest(description=str(err))
         try:
-            p_res = PlayerResult(
+            player_result = PlayerResult(
                 points=request.json["points"],
                 match_id=match.id,
                 player_id=request.json["player_id"],
                 team_id=request.json["team_id"]
             )
-            print(p_res)
-            db.session.add(p_res)
+            print(player_result)
+            db.session.add(player_result)
             db.session.commit()
         except KeyError:
             db.session.rollback()
@@ -129,7 +128,7 @@ class PlayerResultCollection(Resource):
 
         return Response(
             status=201,
-            headers={"Location": url_for("api.playerresultitem", match=match, p_res=p_res)}
+            headers={"Location": url_for("api.playerresultitem", match=match, player_result=player_result)}
         )
 
 
@@ -137,6 +136,122 @@ class PlayerResultItem(Resource):
     """
     item of player_result
     """
+
     @cache.cached(timeout=5)
-    def get(self, match=None):
-        pass
+    def get(self, player_result, match):
+        """
+        Get one row of results
+
+        ---
+        tags:
+            - results
+        description: Get one row
+        parameters:
+            - $ref: '#/components/parameters/match_id'
+            - $ref: '#/components/parameters/player_result_id'
+        responses:
+            200:
+                description: One row of player results
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/PlayerResult'
+                    example:
+                        points: 23
+                        player_id: 1
+                        team_id: 2
+        """
+        body = BGTBuilder(player_result.serialize(long=True))
+        body.add_namespace("BGT", LINK_RELATIONS_URL)
+        body.add_control("self", url_for("api.playerresultitem", match=match, player_result=player_result))
+        body.add_control("profile", PLAYER_RESULT_PROFILE)
+        body.add_control_put("edit", "Edit this row",
+                             url_for("api.playerresultitem",
+                                     match=match,
+                                     player_result=player_result),
+                             schema=PlayerResult.get_schema()
+                             )
+        body.add_control_delete("Delete this row",
+                                url_for("api.playerresultitem",
+                                        match=match,
+                                        player_result=player_result
+                                        )
+                                )
+        response = Response(json.dumps(body), 200, mimetype=MASON)
+
+        return response
+
+    def put(self, player_result, match):
+        """
+        Edit a row of player results
+
+        ---
+        tags:
+            - results
+        description: Edit a row
+        parameters:
+            - $ref: '#/components/parameters/match_id'
+            - $ref: '#/components/parameters/player_result_id'
+        requestBody:
+            description: JSON containing new data for the row
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/PlayerResult'
+                    example:
+                        points: 23
+                        player_id: 1
+                        team_id: 2
+        responses:
+            204:
+                description: Row modified, return new URI
+                headers:
+                    Location:
+                        description: URI of the player_result
+                        schema:
+                            type: string
+        """
+        if not request.mimetype == JSON:
+            raise UnsupportedMediaType
+        try:
+            validate(request.json, PlayerResult.get_schema())
+        except ValidationError as err:
+            raise BadRequest(description=str(err))
+
+        player_result.match_id = match.id
+        player_result.points = request.json["points"]
+        player_result.player_id = request.json["player_id"]
+        player_result.team_id = request.json["team_id"]
+
+        db.session.commit()
+
+        # return the location?
+        return Response(status=204, headers={
+            "Location": url_for("api.playerresultitem",
+                                match=match,
+                                player_result=player_result
+                                )
+        }
+                        )
+
+    def delete(self, player_result, match):
+        """
+        Delete a row of player_results
+
+        From
+        https://github.com/enkwolf/pwp-course-sensorhub-api-example/blob/master/sensorhub/resources/sensor.py
+
+        ---
+        tags:
+            - results
+        description: Delete a row
+        parameters:
+            - $ref: '#/components/parameters/match_id'
+            - $ref: '#/components/parameters/player_result_id'
+        responses:
+            204:
+                description: Row deleted, nothing to return
+        """
+        db.session.delete(player_result)
+        db.session.commit()
+
+        return Response(status=204)
